{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 18,
  "lineage": "3c74f2b3-9c76-a55b-d094-6b1a0498abed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-844e0bf7",
            "arn": "arn:aws:ec2:eu-west-1:391761776243:instance/i-044bc52302c1d87c4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044bc52302c1d87c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee7426ea6118d2ab",
            "private_dns": "ip-10-0-1-33.eu-west-1.compute.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-54-194-38-160.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.38.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0878c49dfcd00be97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ae0ba33fe141eb0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097fa9e7d1abff34b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b7e8cb4fbb471a2e",
            "owner_id": "391761776243",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0006da4476b7717e9",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7e8cb4fbb471a2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00134b0a65efc6f1b",
            "route_table_id": "rtb-0006da4476b7717e9",
            "subnet_id": "subnet-05ae0ba33fe141eb0"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09765b339ab44614c",
            "route_table_id": "rtb-0006da4476b7717e9",
            "subnet_id": "subnet-00069acfe4e0f68e7"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d17a17ee9424b8",
            "route_table_id": "rtb-0006da4476b7717e9",
            "subnet_id": "subnet-09a1e9dea2d899014"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:security-group/sg-097fa9e7d1abff34b",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097fa9e7d1abff34b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "391761776243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-052e2483b4c89dd34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-052e2483b4c89dd34",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0a2a56c16c79204c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a2a56c16c79204c3",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0a19ad8c473a9b538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a19ad8c473a9b538",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-05ae0ba33fe141eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ae0ba33fe141eb0",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-00069acfe4e0f68e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00069acfe4e0f68e7",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-09a1e9dea2d899014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09a1e9dea2d899014",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0244cc613e2a56607"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:vpc/vpc-0244cc613e2a56607",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b34ee64469c290e",
            "default_route_table_id": "rtb-0af1a53ec0799b306",
            "default_security_group_id": "sg-0c624eef0d4ec37e4",
            "dhcp_options_id": "dopt-495b0f2f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0244cc613e2a56607",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af1a53ec0799b306",
            "owner_id": "391761776243",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}